Modified css paths to absolute paths instead of relative paths

--- a/views/layouts/login.jade
+++ b/views/layouts/login.jade
@@ -9,22 +9,22 @@ html(lang='en')
       
     block styles
       //- bootstrap and font-awesome
-      link(rel='stylesheet', href='assets/css/bootstrap.css')
-      link(rel='stylesheet', href='assets/css/font-awesome.css')
+      link(rel='stylesheet', href='/assets/css/bootstrap.css')
+      link(rel='stylesheet', href='/assets/css/font-awesome.css')
       //- text fonts
-      link(rel='stylesheet', href='assets/css/ace-fonts.css')
+      link(rel='stylesheet', href='/assets/css/ace-fonts.css')
       //- ace styles
-      link(rel='stylesheet', href='assets/css/ace.css')
+      link(rel='stylesheet', href='/assets/css/ace.css')
         
       //
         [if lte IE 9]>
-          <link rel="stylesheet" href="assets/css/ace-part2.css" />
+          <link rel="stylesheet" href="/assets/css/ace-part2.css" />
         <![endif]
       //- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries
       //
         [if lte IE 9]>
-        <script src="js/html5shiv.js"></script>
-        <script src="assets/js/respond.js"></script>
+        <script src="/assets/js/html5shiv.js"></script>
+        <script src="/assets/js/respond.js"></script>
         <![endif]
   body(class='login-layout light-login')
     div(class='main-container')
