--- a/views/login.jade
+++ b/views/login.jade
@@ -16,14 +16,14 @@ block boxContent
             br
             br
             ul
-              for error in errors
-                li error
+              each error in errors
+                li= error.msg
         form(method='POST', action='/auth/login')
           fieldset
             input(type='hidden', name='_csrf', value=csrftoken)
             label(class='block clearfix')
               span(class='block input-icon input-icon-right')
-                input(type='text', class='form-control', placeholder='Username', name='username', value=username)
+                input(type='text', class='form-control', placeholder='Username', name='username', value= username ? username : '')
                 i(class='ace-icon fa fa-user')
             label(class='block clearfix')
               span(class='block input-icon input-icon-right')
@@ -46,4 +46,26 @@ block boxContent
       
 append scripts
   script(type='text/javascript')
-    | window.jQuery || document.write("<script src='assets/js/jquery.js'>"+"<"+"/script>");
+    | window.jQuery || document.write("<script src='/assets/js/jquery.js'>"+"<"+"/script>");
+  script.
+    $(document).ready(function() {
+      $('form').submit(function(event) {
+        $('button i').removeClass('fa-key').addClass('fa-spinner fa-spin');
+      //-   var formData = {
+      //-     username: $('input[name=username]').val(),
+      //-     password: $('input[name=password]').val(),
+      //-     remember: $('input[name=remember]').val()
+      //-   };
+      //-   
+      //-   $.ajax({
+      //-     type: 'POST',
+      //-     url: '/auth/login',
+      //-     data: formData,
+      //-     //- dataType: 'json',
+      //-     //- encode: true,
+      //-   }).done(function(data) {
+      //-     console.log(data);
+      //-   });
+      //-   event.preventDefault();
+      });
+    });
