--- a/views/login.jade
+++ b/views/login.jade
@@ -12,7 +12,7 @@ block boxContent
         if errors
           div(class='alert alert-danger')
             strong Whoops!
-            | There were some problems with your input.
+            | There were some problems with your request.
             br
             br
             ul
