Added a space between 'Whoops' and the login error title

--- a/views/login.jade
+++ b/views/login.jade
@@ -12,7 +12,7 @@ block boxContent
         if errors
           div(class='alert alert-danger')
             strong Whoops!
-            | There were some problems with your request.
+            | &nbsp;Problems with your request.
             br
             br
             ul
