--- a/views/login.jade
+++ b/views/login.jade
@@ -13,11 +13,12 @@ block boxContent
           div(class='alert alert-danger')
             strong Whoops!
             | &nbsp;Problems with your request.
-            br
-            br
-            ul
+            div(class='space-4')
+            div
               each error in errors
-                li= error.msg
+                span(class='block')
+                  i(class='ace-icon fa fa-comments-o')
+                  span &nbsp; #{error.msg}
         form(method='POST', action='/auth/login')
           fieldset
             input(type='hidden', name='_csrf', value=csrftoken)
