Modified error reporting to handle, success, error, and info with source from the flashed messages

--- a/views/forgot-password.jade
+++ b/views/forgot-password.jade
@@ -10,21 +10,21 @@ block boxContent
         div(class='space-6')
         p Enter your email to receive instructions
         
-        if (success)
-          div(class='alert alert-success')
-            strong Yeah!&nbsp;
-            p success
+        if messages.info
+          div(class='alert alert-info')
+            i(class='ace-icon fa fa-comments-o')
+            span &nbsp; !{messages.info}
         
-        if errors
+        if messages.error
           div(class='alert alert-danger')
-            strong Whoops!
-            | &nbsp;Problems with your request.
-            div(class='space-4')
-            div
-              each error in errors
-                span(class='block')
-                  i(class='ace-icon fa fa-comments-o')
-                  span &nbsp; #{error.msg}
+            i(class='ace-icon fa fa-comments-o')
+            span &nbsp; !{messages.error}
+            
+        if messages.success
+          div(class='alert alert-success')
+            i(class='ace-icon fa fa-comments-o')
+            span &nbsp; #{messages.success}
+              
         form(method='POST', action='/auth/forgot-password')
           fieldset
             input(type='hidden', name='_csrf', value=csrftoken)
