--- a/views/layouts/login.jade
+++ b/views/layouts/login.jade
@@ -31,7 +31,7 @@ html(lang='en')
       div(class='main-content')
         div(class='row')
           div(class='col-sm-10 col-sm-offset-1')
-            div(class='login-container')
+            div(class= errorContainer ? '' : 'login-container')
               div(class='center')
                 h1
                   i(class='ace-icon fa fa-globe green')
