Restructured the views directory. Grouped common views

--- a/views/auth/reset-password.jade
+++ b/views/auth/reset-password.jade
@@ -1,4 +1,4 @@
-extends ./layouts/login.jade
+extends ../layouts/login.jade
 
 block boxContent
   div(id='forgot-box', class='forgot-box visible widget-box no-border')
@@ -50,21 +50,5 @@ append scripts
     $(document).ready(function() {
       $('form').submit(function(event) {
         $('button i').removeClass('fa-key').addClass('fa-spinner fa-spin');
-      //-   var formData = {
-      //-     username: $('input[name=username]').val(),
-      //-     password: $('input[name=password]').val(),
-      //-     remember: $('input[name=remember]').val()
-      //-   };
-      //-   
-      //-   $.ajax({
-      //-     type: 'POST',
-      //-     url: '/auth/login',
-      //-     data: formData,
-      //-     //- dataType: 'json',
-      //-     //- encode: true,
-      //-   }).done(function(data) {
-      //-     console.log(data);
-      //-   });
-      //-   event.preventDefault();
       });
     });
