--- a/views/auth/login.jade
+++ b/views/auth/login.jade
@@ -1,4 +1,4 @@
-extends ./layouts/login.jade
+extends ../layouts/login.jade
 
 block boxContent
   div(id='login-box', class='login-box visible widget-box no-border')
@@ -57,21 +57,5 @@ append scripts
     $(document).ready(function() {
       $('form').submit(function(event) {
         $('button i').removeClass('fa-key').addClass('fa-spinner fa-spin');
-      //-   var formData = {
-      //-     username: $('input[name=username]').val(),
-      //-     password: $('input[name=password]').val(),
-      //-     remember: $('input[name=remember]').val()
-      //-   };
-      //-   
-      //-   $.ajax({
-      //-     type: 'POST',
-      //-     url: '/auth/login',
-      //-     data: formData,
-      //-     //- dataType: 'json',
-      //-     //- encode: true,
-      //-   }).done(function(data) {
-      //-     console.log(data);
-      //-   });
-      //-   event.preventDefault();
       });
     });
