--- a/views/layouts/default.jade
+++ b/views/layouts/default.jade
@@ -79,3 +79,49 @@ html(lang='en')
     // basic scripts
     block scripts
       include ./partials/scripts
+      script(type='text/javascript').
+      
+        /* --------------------------------------------------------
+        Date Time Widget
+        -----------------------------------------------------------*/
+         var monthNames = [ "January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December" ];
+         var dayNames= ["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"]
+
+         // Create a newDate() object
+         var newDate = new Date();
+
+         // Extract the current date from Date object
+        //-  newDate.setDate(newDate.getDate());
+
+         // Output the day, date, month and year
+         $('#date').html(dayNames[newDate.getDay()] + " " + newDate.getDate() + ' ' + monthNames[newDate.getMonth()] + ' ' + newDate.getFullYear());
+         $('#day').html(dayNames[newDate.getDay()]);
+         
+         setInterval( function() {
+
+             // Create a newDate() object and extract the seconds of the current time on the visitor's
+             var seconds = new Date().getSeconds();
+
+             // Add a leading zero to seconds value
+             $("#sec").html(( seconds < 10 ? "0":"" ) + seconds);
+         },1000);
+
+         setInterval( function() {
+
+             // Create a newDate() object and extract the minutes of the current time on the visitor's
+             var minutes = new Date().getMinutes();
+
+             // Add a leading zero to the minutes value
+             $("#min").html(( minutes < 10 ? "0":"" ) + minutes);
+             // console.log("yes");
+         },1000);
+
+         setInterval( function() {
+
+             // Create a newDate() object and extract the hours of the current time on the visitor's
+             var hours = new Date().getHours();
+
+             // Add a leading zero to the hours value
+             $("#hours").html(( hours < 10 ? "0" : "" ) + (hours > 12 ? hours - 12 : hours));
+             $("#ampm").html((hours >= 12 ? "PM" : "AM"));
+         }, 1000);
