Comment out unrequired documentation scripts from defualt.jde template

--- a/views/layouts/partials/scripts.jade
+++ b/views/layouts/partials/scripts.jade
@@ -46,13 +46,13 @@ script(type='text/javascript').
   })
 // the following scripts are used in demo only for onpage help and you don't need them
 link(rel='stylesheet', href='/assets/css/ace.onpage-help.css')
-link(rel='stylesheet', href='/docs/assets/js/themes/sunburst.css')
+//- link(rel='stylesheet', href='/docs/assets/js/themes/sunburst.css')
 script(type='text/javascript').
   ace.vars['base'] = '..';
 script(src='/assets/js/ace/elements.onpage-help.js')
 script(src='/assets/js/ace/ace.onpage-help.js')
-script(src='/docs/assets/js/rainbow.js')
-script(src='/docs/assets/js/language/generic.js')
-script(src='/docs/assets/js/language/html.js')
-script(src='/docs/assets/js/language/css.js')
-script(src='/docs/assets/js/language/javascript.js')
+//- script(src='/docs/assets/js/rainbow.js')
+//- script(src='/docs/assets/js/language/generic.js')
+//- script(src='/docs/assets/js/language/html.js')
+//- script(src='/docs/assets/js/language/css.js')
+//- script(src='/docs/assets/js/language/javascript.js')
