--- a/views/calendar.jade
+++ b/views/calendar.jade
@@ -5,6 +5,105 @@ block sidebar
 block topbar
   include ./partials/dashboard-topbar
 append scripts
-
+  //- page specific scripts
+  script(src='/assets/js/jquery-ui.custom.js')
+  script(src='/assets/js/jquery.ui.touch-punch.js')
+  script(src='/assets/js/date-time/moment.js')
+  script(src='/assets/js/fullcalendar.js')
+  script(src='/assets/js/bootbox.js')
+    
+  script(type='text/javascript').
+    $('#external-events div.external-event').each(function() {
+      //- create an Event Object (http://arshaw.com/fullcalendar/docs/event_data/Event_Object/)
+      //- it doesn't need to have a start or end.
+      var eventObject = {
+        title: $.trim($(this).text()), 
+        description: "Description: " + $.trim($(this).text())
+      };
+      
+      //- store the Event Object in the DOM element so we can get to it later
+      $(this).data('eventObject', eventObject);
+      
+      //- make the Event draggable using jQuery UI
+      $(this).draggable({
+        zIndex: 999,
+        revert: true, 
+        revertDuration: 300
+      });
+    });
+    
+    //- Initialize the calendar
+    var date = new Date(),
+      d = date.getDate(),
+      m = date.getMonth(),
+      y = date.getFullYear();
+      
+    var calendar = $('#calendar').fullCalendar({
+      buttonHtml: {
+        prev: '<i class="ace-icon fa fa-chevron-left"></i>',
+        next: '<i class="ace-icon fa fa-chevron-right"></i>'
+      },
+      header: {
+        left: 'prev,next today',
+        center: 'title',
+        right: 'month,agendaWeek,agendaDay'
+      },
+      weekNumbers: true,
+      businessHours: {
+        start: '10:00',
+        end: '18:00',
+        //- days of week. an array of zero-based day of week intgers (0 = Sunday)
+        dow: [1, 2, 3, 4, 5]
+        
+      },
+      events: [
+        {
+          title: 'All Day Event',
+          start: new Date(y, m, 1),
+          className: 'label-important'
+        },
+        {
+          title: 'Long Event',
+          start: moment().subtract(5, 'days').format('YYYY-MM-DD'),
+          end: moment().subtract(1, 'days').format('YYYY-MM-DD'),
+          className: 'label-success'
+        }
+      ]
+    })
+      
 block content
-  |hola u doing?
+  .row
+    .col-sm-9
+      .space
+      #calendar
+    .col-sm-3
+      .widget-box.transparent
+        .widget-header
+          h4 Drag, drop, edit and save.&nbsp;
+        
+        .widget-body
+          .widget-main.no-padding
+            #external-events
+              .external-event.label-grey(data-class='label-grey')
+                i.ace-icon.fa.fa-arrows
+                |My Event 1
+              
+              .external-event.label-success(data-class='label-success')
+                i.ace-icon.fa.fa-arrows
+                |My Event 2
+              .external-event.label-danger(data-class='label-danger')
+                i.ace-icon.fa.fa-arrows
+                |My Event 3
+              .external-event.label-purple(data-class='label-purple')
+                i.ace-icon.fa.fa-arrows
+                |My Event 4
+              .external-event.label-yellow(data-class='label-yellow')
+                i.ace-icon.fa.fa-arrows
+                |My Event 5
+              .external-event.label-pink(data-class='label-pink')
+                i.ace-icon.fa.fa-arrows
+                |My Event 6
+              .external-event.label-info(data-class='label-info')
+                i.ace-icon.fa.fa-arrows
+                |My Event 7
+            
