--- a/views/layouts/partials/scripts.jade
+++ b/views/layouts/partials/scripts.jade
@@ -29,30 +29,11 @@ script(src='/assets/js/ace/ace.searchbox-autocomplete.js')
 // inline scripts related to this page
 script(type='text/javascript').
   jQuery(function($) {
-  $('#sidebar2').insertBefore('.page-content');
-  $('.navbar-toggle[data-target="#sidebar2"]').insertAfter('#menu-toggler');
-  $(document).on('settings.ace.two_menu', function(e, event_name, event_val) {
-  if(event_name == 'sidebar_fixed') {
-  if( $('#sidebar').hasClass('sidebar-fixed') ) {
-  $('#sidebar2').addClass('sidebar-fixed');
-  $('#navbar').addClass('h-navbar');
-  }
-  else {
-  $('#sidebar2').removeClass('sidebar-fixed')
-  $('#navbar').removeClass('h-navbar');
-  }
-  }
-  }).triggerHandler('settings.ace.two_menu', ['sidebar_fixed' ,$('#sidebar').hasClass('sidebar-fixed')]);
-  })
-// the following scripts are used in demo only for onpage help and you don't need them
-link(rel='stylesheet', href='/assets/css/ace.onpage-help.css')
-//- link(rel='stylesheet', href='/docs/assets/js/themes/sunburst.css')
-script(type='text/javascript').
-  ace.vars['base'] = '..';
-script(src='/assets/js/ace/elements.onpage-help.js')
-script(src='/assets/js/ace/ace.onpage-help.js')
-//- script(src='/docs/assets/js/rainbow.js')
-//- script(src='/docs/assets/js/language/generic.js')
-//- script(src='/docs/assets/js/language/html.js')
-//- script(src='/docs/assets/js/language/css.js')
-//- script(src='/docs/assets/js/language/javascript.js')
+    $('#sidebar2').insertBefore('.page-content');
+    $('.navbar-toggle[data-target="#sidebar2"]').insertAfter('#menu-toggler');
+    
+    $('ul.nav li a').each(function(){
+      if($($(this))[0].href==String(window.location))
+        $(this).parent().addClass('active');
+    });
+  });
