Remove RSS link from footer

--- a/views/layouts/partials/footer.jade
+++ b/views/layouts/partials/footer.jade
@@ -4,10 +4,8 @@
     Application &copy; 2015
   |&nbsp; &nbsp;
   span.action-buttons
-    a(href='#')
+    a(href='http://www.twitter.com/xyz', target='_blank')
       i.ace-icon.fa.fa-twitter-square.light-blue.bigger-150
-    a(href='#')
+    a(href='http://www.facebook.com/xyz', target='_blank')
       i.ace-icon.fa.fa-facebook-square.text-primary.bigger-150
-    a(href='#')
-      i.ace-icon.fa.fa-rss-square.orange.bigger-150
 // /section:basics/footer
