Add id 'profile-foto' to profile picture to enable client side changing when profile foto is updated

--- a/views/layouts/partials/navbar.jade
+++ b/views/layouts/partials/navbar.jade
@@ -113,7 +113,7 @@
         // #section:basics/navbar.user_menu
         li.light-blue
           a.dropdown-toggle(data-toggle='dropdown', href='#')
-            img.nav-user-photo(src='/assets/avatars/user.jpg', alt="Jason's Photo")
+            img.nav-user-photo(src='/assets/avatars/user.jpg', id="profile-foto", alt="Jason's Photo")
             span.user-info
               small Welcome,
               | #{name}
