Add proper URLs for the Menu Items

--- a/views/partials/dashboard-topbar.jade
+++ b/views/partials/dashboard-topbar.jade
@@ -9,7 +9,7 @@ button.pull-left.navbar-toggle.collapsed(data-target='#sidebar2', data-toggle='c
     //-     span.menu-text  Dashboard 
     //-   b.arrow
     li.hover
-      a(href='#')
+      a(href='/user/record')
         i.menu-icon.fa.fa-stethoscope
         span.menu-text Medical Record
       b.arrow
@@ -20,17 +20,17 @@ button.pull-left.navbar-toggle.collapsed(data-target='#sidebar2', data-toggle='c
           | Events Calendar
       b.arrow
     li.hover
-      a(href='#')
+      a(href='/chat/video')
         i.menu-icon.fa.fa-camera-retro
         span.menu-text  Video conference
       b.arrow
     li.hover
-      a(href='#')
+      a(href='/chat/text')
         i.menu-icon.fa.fa-comments-o
         span.menu-text Text Chat
       b.arrow
     li.hover
-      a(href='#')
+      a(href='/user/messages')
         i.menu-icon.fa.fa-envelope-o
         span.menu-text
           | Messages
