--- a/views/profile.jade
+++ b/views/profile.jade
@@ -420,7 +420,7 @@ block content
     .col-xs-12.col-sm-2.center
       div
         span.profile-picture
-          img#avatar.editable.img-responsive(alt='Alex avatar', src='/assets/avatars/avatar2.png', data-pk="#{user}")
+          img#avatar.editable.img-responsive(alt='Alex avatar', src='/assets/avatars/avatar2.png', data-pk="#{b1tr13nt}")
         .space-2
         .width-80.label.label-info.label-xlg.arrowed-in.arrowed-in-right
           span.white Cinfwat Probity
