--- a/views/layouts/partials/navbar.jade
+++ b/views/layouts/partials/navbar.jade
@@ -14,7 +14,7 @@
       a.navbar-brand(href='#')
         small
           i.fa.fa-stethoscope
-          | &nbsp;Telemonitoring System
+          | &nbsp;#{siteTitle}
       // /section:basics/navbar.layout.brand
       // #section:basics/navbar.toggle
       button.pull-right.navbar-toggle.navbar-toggle-img.collapsed(type='button', data-toggle='collapse', data-target='.navbar-buttons')
