--- a/views/layouts/default.jade
+++ b/views/layouts/default.jade
@@ -3,7 +3,7 @@ html(lang='en')
   head
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     meta(charset='utf-8')
-    title= title
+    title  #{pageTitle} - #{siteTitle}
     meta(name='description', content='')
     meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0')
     block styles
