Add font-awesome 4.3.0 and use the heartbeat icon for Medical Record menu item

--- a/views/partials/dashboard-topbar.jade
+++ b/views/partials/dashboard-topbar.jade
@@ -10,7 +10,7 @@ button.pull-left.navbar-toggle.collapsed(data-target='#sidebar2', data-toggle='c
     //-   b.arrow
     li.hover
       a(href='/user/record')
-        i.menu-icon.fa.fa-stethoscope
+        i.menu-icon.fa.fa-heartbeat
         span.menu-text Medical Record
       b.arrow
     li.hover
