Remove second font-awesome stethoscope icon after title on login page

--- a/views/layouts/login.jade
+++ b/views/layouts/login.jade
@@ -36,8 +36,8 @@ html(lang='en')
                 h1
                   i(class='ace-icon fa fa-stethoscope green')
                   //- span(class='red') &nbsp;Hypertension&nbsp;
-                  span(class='grey', id='id-text2') #{siteTitle}
-                  i(class='ace-icon fa fa-stethoscope fa-flip-horizontal green')
+                  span(class='grey', id='id-text2') &nbsp;#{siteTitle}
+                  //- i(class='ace-icon fa fa-stethoscope fa-flip-horizontal green')
                 h4(class='blue') #{tagLine}
               div(class='space-6')
               div(class='position-relative')
