Rename settings box to chat-box in layout partials and use it in other templates
Its actually just the initial commit for the chatting part of the project

--- a/views/layouts/default.jade
+++ b/views/layouts/default.jade
@@ -47,8 +47,8 @@ html(lang='en')
         .main-content-inner
           .page-content
             // #section:settings.box
-            block settings
-              include ./partials/settings-box
+            block chat
+              include ./partials/chat-box
             .page-header
               h1= pageTitle ? pageTitle : 'Page Title' 
             // /.page-header
