--- a/views/video.jade
+++ b/views/video.jade
@@ -7,7 +7,7 @@ append pagespecificstyles
   //-   |  -moz-filter: hue-rotate(180deg) saturate(200%);
   //-   |  -webkit-filter: hue-rotate(180deg) saturate(200%);
   //-   |}
-block settings
+block chat
 block sidebar
 block topbar
   include ./partials/dashboard-topbar
