--- a/views/record.jade
+++ b/views/record.jade
@@ -1,7 +1,7 @@
 extends ./layouts/default
 append pagespecificstyles
   //- page specific styles
-block settings
+//- block chat
 block sidebar
 block topbar
   include ./partials/dashboard-topbar
