--- a/public/assets/css/ace.css
+++ b/public/assets/css/ace.css
@@ -118,6 +118,12 @@ a:focus,
 a:active {
   text-decoration: none;
 }
+a.undecorated:hover {
+  text-decoration: none;
+}
+.title-case {
+  text-transform: capitalize;
+}
 h1 {
   font-size: 32px;
   font-weight: normal;
@@ -18710,7 +18716,7 @@ input.typeahead.scrollable ~ .tt-dropdown-menu {
   }
 }
 .ace-settings-container {
-  position: absolute;
+  position: fixed;
   right: 0;
   top: auto;
   z-index: 12;
@@ -18753,7 +18759,7 @@ input.typeahead.scrollable ~ .tt-dropdown-menu {
   max-width: 320px;
   max-height: 1000px;
   padding: 0 14px;
-  border-width: 2px;
+  border-width: 1px 0px 1px 1px;
   -webkit-transition-delay: 0s;
   -moz-transition-delay: 0s;
   -o-transition-delay: 0s;
