--- a/views/layouts/partials/scripts.jade
+++ b/views/layouts/partials/scripts.jade
@@ -36,4 +36,12 @@ script(type='text/javascript').
       if($($(this))[0].href==String(window.location))
         $(this).parent().addClass('active');
     });
+    
+    $('.scrollable').each(function() {
+      var $this = $(this);
+      $(this).ace_scroll({
+        size: $this.attr('data-size') || 100,
+        
+      });
+    });
   });
