Modify chat-box to doctors-box
also change jade block name from chat to doctors

--- a/views/layouts/partials/doctors-box.jade
+++ b/views/layouts/partials/doctors-box.jade
@@ -1,11 +1,11 @@
 #ace-settings-container.ace-settings-container
   #ace-settings-btn.btn.btn-app.btn-xs.btn-warning.ace-settings-btn
-    i.ace-icon.fa.fa-comments-o.bigger-130
+    i.ace-icon.fa.fa-user-md.bigger-130
   #ace-settings-box.ace-settings-box.clearfix
     .widget-box.transparent
       .widget-header
         h4.widget-title.lighter
-          i.fa.fa-user-md
+          //- i.fa.fa-empire
           |&nbsp;Doctors
         .widget-toolbar.no-border
           //- a(href="#", data-action="reload")
@@ -23,3 +23,8 @@
                 .fa.fa-circle-o-notch.darkgray
                 a.undecorated.title-case(href='#')&nbsp;&nbsp;james tom cavantani
               .profile-info-value Southampton Medical Center, USA
+          .center
+            a.btn.btn-sm.btn-primary.btn-white.btn-round(href='/doctors')
+              //- i.ace-icon.fa.fa-search.bigger-150.middle.orange2
+              span.bigger-110 View all Doctors&nbsp;
+              i.icon-on-right.ace-icon.fa.fa-search.bigger-150.middle
