--- a/views/calendar.jade
+++ b/views/calendar.jade
@@ -2,7 +2,7 @@ extends ./layouts/default
 append pagespecificstyles
   link(rel='stylesheet', href='/assets/css/jquery-ui.custom.css')
   link(rel='stylesheet', href='/assets/css/fullcalendar.css')
-//- block chat
+//- block doctors
 block sidebar
 block topbar
   include ./partials/dashboard-topbar
