--- a/views/inbox.jade
+++ b/views/inbox.jade
@@ -1,7 +1,7 @@
 extends ./layouts/default
 append pagespecificstyles
   //- page specific styles
-//- block chat
+//- block doctors
 block sidebar
 block topbar
   include ./partials/dashboard-topbar
