--- a/views/layouts/default.jade
+++ b/views/layouts/default.jade
@@ -47,8 +47,8 @@ html(lang='en')
         .main-content-inner
           .page-content
             // #section:settings.box
-            block chat
-              include ./partials/chat-box
+            block doctors
+              include ./partials/doctors-box
             .page-header
               h1= pageTitle ? pageTitle : 'Page Title' 
             // /.page-header
