--- a/views/profile.jade
+++ b/views/profile.jade
@@ -6,7 +6,7 @@ append pagespecificstyles
   link(rel='stylesheet', href='/assets/css/select2.css')
   link(rel='stylesheet', href='/assets/css/datepicker.css')
   link(rel='stylesheet', href='/assets/css/bootstrap-editable.css')
-//- block chat
+//- block doctors
 block sidebar
 block topbar
   include ./partials/dashboard-topbar
